--- a/开发笔记.md
+++ b/开发笔记.md
@@ -59,7 +59,7 @@ https://godotengine.org/asset-library/asset/2727 2D Platformer Demo
 
 ## Github
 
-使用桌面应用创建新库的时候会自己创建文件夹。因此不要文件夹套文件夹。
+使用Desktop创建新repository的时候会自己创建文件夹。因此不要文件夹套文件夹。（我可能使用了错误的方法，正确的方法可能是选择文件夹然后创建库）
 
 ## TODO
 
