一个疯狂小游戏做好了
但是模板没下。没法导出。

--- a/notes/开发笔记.md
+++ b/notes/开发笔记.md
@@ -22,6 +22,10 @@ https://docs.godotengine.org/en/stable/getting_started/step_by_step/signals.html
 
 https://www.reddit.com/r/godot/comments/vodp2a/how_does_the_call_down_signal_up_practice_work/
 
+**小贴士**
+
+复制节点的时候它的子资源也会跟着复制引用。有什么解决办法？我的办法是设置一个模板。而模板中的资源指针悬空。这样就不会指向任何人。不会重复指向。
+
 **Shader**
 
 https://docs.godotengine.org/en/4.2/tutorials/shaders/index.html
@@ -92,6 +96,16 @@ https://godotengine.org/asset-library/asset/2727 2D Platformer Demo
 
 树叶和草丛的动画是用shader实现的。
 
+**Rigid Body Character 3D**
+
+用脚底的ShapeCast来检测是不是在地面上。似乎比Area检测碰撞来得高效？
+
+我的人物疯狂转动，这是为什么？没有禁止转动。
+
+人物粘附在墙壁上，或许因为是摩擦力。
+
+人物卡在墙里一像素。有时候会被墙创飞。待解决。
+
 
 
 ## TODO
@@ -113,6 +127,14 @@ Boss Fight（heartbeast 的1-bit那种?）
 隐藏的旋转物体。移动平台。
 
 触发幽灵模式穿过地面。蹦床。冰火人式的机关。
+
+
+
+目前重开不是真正的重开。
+
+速度没有归一化。
+
+平台上播放跑步动画。
 
 ## Aseprite
 
