钥匙平台单向空气墙
防止玩家看不到演出

--- a/notes/开发笔记.md
+++ b/notes/开发笔记.md
@@ -106,6 +106,10 @@ https://godotengine.org/asset-library/asset/2727 2D Platformer Demo
 
 人物卡在墙里一像素。有时候会被墙创飞。待解决。
 
+**Rigid Body Platformer 2D**
+
+为什么用Seperation Ray？
+
 
 
 ## TODO
@@ -135,6 +139,8 @@ Boss Fight（heartbeast 的1-bit那种?）
 速度没有归一化。
 
 平台上播放跑步动画。
+
+有空看看人家项目怎么搞的，减少物理上的bug。
 
 ## Aseprite
 
