--- a/notes/开发笔记.md
+++ b/notes/开发笔记.md
@@ -138,6 +138,8 @@ Boss Fight（heartbeast 的1-bit那种?）
 
 速度没有归一化。
 
+玩家地面判定有问题，有的时候站在斜坡上判定为不在地面。是不是判定框应该突出一下？还是怎么办？
+
 平台上播放跑步动画。
 
 有空看看人家项目怎么搞的，减少物理上的bug。
